# neyro-cpp

./: CMakeLists.txt  README.md  playlists.txt
docs/: Doxyfile  Doxyfile.in
include/: emotion_detector.h  emotion_processor.h  logger.h  playlist_manager.h  utils.h
src/: emotion_detector.cpp  emotion_processor.cpp  logger.cpp  main.cpp  playlist_manager.cpp  utils.cpp
tests/: CMakeLists.txt  test_playlist_manager.cpp  test_utils.cpp
